--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "license": "Unlicensed",
   "scripts": {
     "dev": "nodemon src/index.ts",
-    "build": "./node_modules/typescript/bin/tsc",
+    "build": "tsc",
     "start": "node dist/index.js" 
  }
 }
